# roz-mcp

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  PRIVACY.md  README.md  SECURITY.md  Zphil.Roz.slnx  glama.json
scripts/ab-test/: .gitignore  CLAUDE.md  README.md  analyze.py  generate_references.py  pyproject.toml  run.py
scripts/ab-test/configs/: arm-a-all.json  arm-a-default.json  arm-am-on.json  arm-am-routed.json  arm-b-baseline.json  arm-ci-baseline.json  arm-ci-on.json  arm-prompt-recipe.json
scripts/ab-test/patches/: P2-planted-warnings.patch  P3-breaking-changes.patch  P5-dead-code.patch  P6-accessibility.patch
scripts/ab-test/tasks/: 00-smoke.md  01-feature-add.md  02-audit.md  02-audit.reference.md  03-refactor-rename.md  04-impact-analysis.md  04-impact-analysis.reference.md  05-explain-service.md  05-explain-service.reference.md  06-impact-remove.md  06-impact-remove.reference.md  07-impact-accessibility.md  07-impact-accessibility.reference.md  08-impact-signature.md  08-impact-signature.reference.md  09-impact-trap.md  10-method-callgraph.md  10-method-callgraph.reference.md  11-method-interface.md  11-method-interface.reference.md  12-method-overloads.md  12-method-overloads.reference.md  13-method-trap.md  14-dead-code-traps.md  P1-assess-impact.md  P2-fix-diagnostics.md  P3-check-breaking-changes.md  P3-check-breaking-changes.reference.md  P4a-decompile-path.md  P4a-decompile-path.reference.md  P4b-decompile-pascalize.md  P4b-decompile-pascalize.reference.md  (+4 more)
(+606 files in other folders)
