[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roslyn-abtest"
version = "0.1.0"
description = "A/B testing harness for Roslyn-MCP vs baseline Claude"
requires-python = ">=3.11"
dependencies = ["claude-agent-sdk", "pyyaml>=6", "numpy>=1.26", "scipy>=1.11"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
roslyn-abtest = "roslyn_abtest.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: SDK-touching tests; require nopCommerce cache and invoke claude_agent_sdk.query",
]
addopts = "-m 'not integration'"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/roslyn_abtest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
